feat: update OPENAPI spec for Service Account (#121)
