# openapi/managed-services-api.yaml
@@ -13,16 +13,49 @@ servers:
   - url: /
     description: current domain
 paths:
-  /api/managed-services-api/v1/serviceAccount:
-    get:
+  /api/managed-services-api/v1/serviceaccounts:
+    post:
       operationId: createServiceAccount
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/ServiceAccountRequest'
       responses:
         "200":
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/TokenResponse'
+                $ref: '#/components/schemas/ServiceAccountResponse'
           description: Service Account
+        "401":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+              examples:
+                401Example:
+                  $ref: '#/components/examples/401Example'
+          description: Auth token is invalid
+        "403":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+              examples:
+                404Example:
+                  $ref: '#/components/examples/404Example'
+          description: Access to this resource is forbidden
+        "500":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+              examples:
+                500Example:
+                  $ref: '#/components/examples/500Example'
+          description: An unexpected error occurred creating the Service Account
       security:
         - Bearer: []
       summary: Create a kafka service account
@@ -45,6 +78,15 @@ paths:
                 401Example:
                   $ref: '#/components/examples/401Example'
           description: Auth token is invalid
+        "403":
+          content:
+              application/json:
+                  schema:
+                      $ref: '#/components/schemas/Error'
+                  examples:
+                      403Example:
+                          $ref: '#/components/examples/403Example'
+          description: User not authorized to access the service.    
         "404":
           content:
             application/json:
@@ -86,6 +128,15 @@ paths:
                 401Example:
                   $ref: '#/components/examples/401Example'
           description: Auth token is invalid
+        "403":
+          content:
+              application/json:
+                  schema:
+                      $ref: '#/components/schemas/Error'
+                  examples:
+                      403Example:
+                          $ref: '#/components/examples/403Example'
+          description: User not authorized to access the service.    
         "404":
           content:
             application/json:
@@ -124,7 +175,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/KafkaRequest'
+              $ref: '#/components/schemas/KafkaRequestPayload'
             examples:
               USRegion:
                 $ref: '#/components/examples/USRegionExample'
@@ -138,8 +189,8 @@ paths:
               schema:
                 $ref: '#/components/schemas/KafkaRequest'
               examples:
-                KafkaRequestPostExample:
-                  $ref: '#/components/examples/KafkaRequestPostExample'
+                KafkaRequestPostResponseExample:
+                  $ref: '#/components/examples/KafkaRequestExample'
           description: Accepted
         "400":
           content:
@@ -159,6 +210,17 @@ paths:
                 401Example:
                   $ref: '#/components/examples/401Example'
           description: Auth token is invalid
+        "403":
+          content:
+              application/json:
+                  schema:
+                      $ref: '#/components/schemas/Error'
+                  examples:
+                      403Example:
+                          $ref: '#/components/examples/403Example'
+                      403MaxAllowedInstanceReachedExample:
+                          $ref: '#/components/examples/403MaxAllowedInstanceReachedExample'    
+          description: User forbidden either because the user is not authorized to access the service or because the maximum number of instances that can be created by this user has been reached. 
         "404":
           content:
             application/json:
@@ -186,13 +248,55 @@ paths:
       security:
         - Bearer: []
       responses:
-        '200':
+        "200":
           description: A list of Kafka requests
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/KafkaRequestList'
-
+        "401":
+          description: Auth token is invalid
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+              examples:
+                401Example:
+                  $ref: '#/components/examples/401Example'
+        "403":
+          content:
+              application/json:
+                  schema:
+                      $ref: '#/components/schemas/Error'
+                  examples:
+                      403Example:
+                          $ref: '#/components/examples/403Example'
+          description: User not authorized to access the service.             
+        "500":
+          description: Unexpected error occurred
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+              examples:
+                500Example:
+                  $ref: '#/components/examples/500Example'
+      parameters:
+        - $ref: '#/components/parameters/page'
+        - $ref: '#/components/parameters/size'
+  /api/managed-services-api/v1/cloud_providers:
+    get:
+      summary: Retrieves the list of supported cloud providers.
+      operationId: listCloudProviders
+      security:
+        - Bearer: []
+      responses:
+        '200':
+          description: Retrieved list of supported cloud providers
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/CloudProviderList'
         '401':
           description: Auth token is invalid
           content:
@@ -212,6 +316,41 @@ paths:
                 500Example:
                   $ref: '#/components/examples/500Example'
       parameters:
+        - $ref: '#/components/parameters/page'
+        - $ref: '#/components/parameters/size'
+  /api/managed-services-api/v1/cloud_providers/{id}/regions:
+    get:
+      summary: Retrieves the list of supported regions of the supported cloud provider.
+      operationId: listCloudProviderRegions
+      security:
+        - Bearer: []
+      responses:
+        '200':
+          description: Retrieved list of supported cloud providers regions
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/CloudRegionList'
+        '401':
+          description: Auth token is invalid
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+              examples:
+                401Example:
+                  $ref: '#/components/examples/401Example'
+        '500':
+          description: Unexpected error occurred
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+              examples:
+                500Example:
+                  $ref: '#/components/examples/500Example'
+      parameters:
+        - $ref: "#/components/parameters/id"
         - $ref: '#/components/parameters/page'
         - $ref: '#/components/parameters/size'
 components:
@@ -242,8 +381,6 @@ components:
           type: integer
         total:
           type: integer
-      example:
-        $ref: '#/components/examples/KafkaRequestListExample'
     Error:
       allOf:
         - $ref: "#/components/schemas/ObjectReference"
@@ -264,7 +401,16 @@ components:
               type: array
               items:
                 $ref: "#/components/schemas/Error"
-    TokenResponse:
+    ServiceAccountRequest:
+      allOf:
+        - $ref: "#/components/schemas/ObjectReference"
+        - type: object
+          properties:
+            name:
+              type: string
+            description:
+              type: string
+    ServiceAccountResponse:
       allOf:
         - $ref: "#/components/schemas/ObjectReference"
         - type: object
@@ -272,6 +418,10 @@ components:
             clientID:
               type: string
             clientSecret:
+              type: string
+            name:
+              type: string
+            description:
               type: string
     KafkaRequest:
       allOf:
@@ -304,12 +454,109 @@ components:
       allOf:
         - $ref: "#/components/schemas/List"
         - type: object
+          example:
+            kind: "KafkaRequestList"
+            page: "1"
+            size: "1"
+            total: "1"
+            item:
+              $ref: '#/components/examples/KafkaRequestExample'
           properties:
             items:
               type: array
               items:
                 allOf:
                   - $ref: "#/components/schemas/KafkaRequest"
+    KafkaRequestPayload:
+      description: Schema for the request body sent to /kafkas POST
+      required:
+        - name
+      type: object
+      properties:
+        cloud_provider:
+          description: The cloud provider where the Kafka cluster will be created in
+          type: string
+        multi_az:
+          description: Set this to true to configure the Kafka cluster to be multiAZ
+          type: boolean
+        name:
+          description: The name of the Kafka cluster
+          type: string
+        region:
+          description: The region where the Kafka cluster will be created in
+          type: string
+    CloudProviderList:
+      allOf:
+        - $ref: "#/components/schemas/List"
+        - type: object
+          example:
+            kind: "CloudProviderList"
+            page: "1"
+            size: "1"
+            total: "1"
+            item:
+              $ref: '#/components/examples/CloudProviderExample'
+          properties:
+            items:
+              type: array
+              items:
+                allOf:
+                  - $ref: "#/components/schemas/CloudProvider"
+    CloudRegionList:
+      allOf:
+        - $ref: "#/components/schemas/List"
+        - type: object
+          example:
+            kind: "CloudRegionList"
+            page: "1"
+            size: "1"
+            total: "1"
+            item:
+              $ref: '#/components/examples/CloudRegionExample'
+          properties:
+            items:
+              type: array
+              items:
+                allOf:
+                  - $ref: "#/components/schemas/CloudRegion"
+    CloudProvider:
+      description: 'Cloud provider.'
+      properties:
+        kind:
+          description: 'Indicates the type of this object. Will be ''CloudProvider'' link.'
+          type: string
+        id:
+          description: 'Unique identifier of the object.'
+          type: string
+        display_name:
+          description: 'Name of the cloud provider for display purposes.'
+          type: string
+        name:
+          description: 'Human friendly identifier of the cloud provider, for example `aws`.'
+          type: string
+        enabled:
+          description: 'Whether the cloud provider is enabled for deploying an OSD cluster.'
+          type: boolean
+      required:
+        - enabled
+    CloudRegion:
+      description: 'Description of a region of a cloud provider.'
+      properties:
+        kind:
+          description: 'Indicates the type of this object. Will be ''CloudRegion''.'
+          type: string
+        id:
+          description: 'Unique identifier of the object.'
+          type: string
+        display_name:
+          description: 'Name of the region for display purposes, for example `N. Virginia`.'
+          type: string
+        enabled:
+          description: 'Whether the region is enabled for deploying an OSD cluster.'
+          type: boolean
+          default: false
+      required:
+        - enabled
   parameters:
     id:
       name: id
@@ -354,26 +601,6 @@ components:
         region: "eu-west-1"
         cloud_provider: "aws"
         name: "serviceapitest"
-    KafkaRequestListExample:
-      value:
-        kind: "KafkaRequestList"
-        page: "1"
-        size: "1"
-        total: "1"
-        items:
-          $ref: '#/components/examples/KafkaRequestExample'
-    KafkaRequestPostExample:
-      value:
-        id: 1iX03lndlmQ0qfC7siTa5sLjV8E
-        kind: Kafka
-        href: /api/managed-services-api/v1/kafkas/1iX03lndlmQ0qfC7siTa5sLjV8E
-        status: accepted
-        cloud_provider: aws
-        region: eu-west-1
-        owner: api_kafka_service
-        name: serviceapi
-        created_at: '2020-10-06T22:40:32.667743942-04:00'
-        updated_at: '2020-10-06T22:40:32.667743942-04:00'
     KafkaRequestExample:
       value:
         id: "1iSY6RQ3JKI8Q0OTmjQFd3ocFRg"
@@ -381,13 +608,26 @@ components:
         href: "/api/managed-services-api/v1/kafkas/1iSY6RQ3JKI8Q0OTmjQFd3ocFRg"
         status: "complete"
         cloud_provider: "aws"
-        multi_az: false
-        region: "eu-west-1"
+        multi_az: true
+        region: "us-east-1"
         owner:  "api_kafka_service"
         name: "serviceapi"
         bootstrapServerHost: "serviceapi-1isy6rq3jki8q0otmjqfd3ocfrg.apps.ms-bttg0jn170hp.x5u8.s1.devshift.org"
         created_at: "2020-10-05T12:51:24.053142Z"
         updated_at: "2020-10-05T12:56:36.362208Z"
+    CloudProviderExample:
+      value:
+        kind: "CloudProvider"
+        id: "aws"
+        name: "aws"
+        display_name: "Amazon Web Services"
+        enabled: true
+    CloudRegionExample:
+      value:
+        kind: "CloudRegion"
+        id: "us-east-1"
+        display_name: "US East, N. Virginia"
+        enabled: true
     400CreationExample:
       value:
         id: "103"
@@ -419,6 +659,22 @@ components:
         code: "OCM-EX-11"
         reason: "Unable to verify JWT token: Required authorization token not found"
         operation_id: "1iY3UhEhwmXBpWPfI2lNekpd4ZD"
+    403Example:
+      value:
+         id: '4'
+         kind: Error
+         href: /api/managed-services-api/v1/errors/4
+         code: MGD-SERV-API-4
+         reason: User 'foo-bar' is not authorized to access the service.
+         operation_id: 1lY3UiEhznXBpWPfI2lNejpd4YC
+    403MaxAllowedInstanceReachedExample:
+      value:
+         id: '4'
+         kind: Error
+         href: /api/managed-services-api/v1/errors/4
+         code: MGD-SERV-API-4
+         reason: User 'foo-bar' has reached a maximum number of 6 allowed instances.
+         operation_id: 1lY3UiEkxnXBpVPeI2oNejd3XB      
     500Example:
       value:
         id: '9'
