# pkg/api/managedservices/model_cloud_region_list.go
@@ -1,0 +1,19 @@
+/*
+ * Managed Service API
+ *
+ * Managed Service API
+ *
+ * API version: 0.0.1
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package managedservices
+
+// CloudRegionList struct for CloudRegionList
+type CloudRegionList struct {
+	Kind  string        `json:"kind"`
+	Page  int32         `json:"page"`
+	Size  int32         `json:"size"`
+	Total int32         `json:"total"`
+	Items []CloudRegion `json:"items"`
+}
