# pkg/api/managedservices/model_cloud_region_list_all_of.go
@@ -1,0 +1,15 @@
+/*
+ * Managed Service API
+ *
+ * Managed Service API
+ *
+ * API version: 0.0.1
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package managedservices
+
+// CloudRegionListAllOf struct for CloudRegionListAllOf
+type CloudRegionListAllOf struct {
+	Items []CloudRegion `json:"items,omitempty"`
+}
