# pkg/api/managedservices/model_service_account_request.go
@@ -1,0 +1,19 @@
+/*
+ * Managed Service API
+ *
+ * Managed Service API
+ *
+ * API version: 0.0.1
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package managedservices
+
+// ServiceAccountRequest struct for ServiceAccountRequest
+type ServiceAccountRequest struct {
+	Id          string `json:"id,omitempty"`
+	Kind        string `json:"kind,omitempty"`
+	Href        string `json:"href,omitempty"`
+	Name        string `json:"name,omitempty"`
+	Description string `json:"description,omitempty"`
+}
