# pkg/api/managedservices/model_service_account_response.go
@@ -1,0 +1,21 @@
+/*
+ * Managed Service API
+ *
+ * Managed Service API
+ *
+ * API version: 0.0.1
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package managedservices
+
+// ServiceAccountResponse struct for ServiceAccountResponse
+type ServiceAccountResponse struct {
+	Id           string `json:"id,omitempty"`
+	Kind         string `json:"kind,omitempty"`
+	Href         string `json:"href,omitempty"`
+	ClientID     string `json:"clientID,omitempty"`
+	ClientSecret string `json:"clientSecret,omitempty"`
+	Name         string `json:"name,omitempty"`
+	Description  string `json:"description,omitempty"`
+}
